# FlockingBoids

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  run_browser.bat  shell.html
assets/shaders/: basic.glsl
src/: boid.cpp  boid.h  boidManager.cpp  boidManager.h  main.cpp
